--- a/app.css
+++ b/app.css
@@ -48,3 +48,20 @@ section {
   list-style-type: none;
   display: none;
 }
+
+select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.grid-2 {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  margin: 5px;
+}
