--- a/app.css
+++ b/app.css
@@ -32,7 +32,7 @@ section {
   margin-bottom: 50px;
 }
 
-.questions {
+#question-container {
   background-color: #ffffff;
   border-left: 5px solid #1da1f2;
   width: 80%;
@@ -62,6 +62,28 @@ select {
 .grid-2 {
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
-  margin: 5px;
+  padding: 15px;
+  margin: 10px 0;
+}
+
+input[type="submit"] {
+  width: 100%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
 }
