--- a/app.css
+++ b/app.css
@@ -36,6 +36,11 @@ body {
   background-color: #f2f2f2;
   padding: 15px;
   margin: 10px 0;
+  padding-right: 2rem;
+  padding-left: 2rem;
+  border-radius: 10px;
+
+  margin-bottom: 50px;
 }
 
 h1 {
@@ -96,4 +101,21 @@ input[type="submit"]:hover {
 
 .show {
   display: block;
+}
+
+.circle {
+  display: flex;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 80px;
+  font-size: 30px;
+  font-weight: bold;
+}
+.ccenter {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
 }
